Improved formatting, added more animals

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    background-image: url("background.png?");
+    background-image: url("background.png");
     color: lime;
     font-family: "Lucida Console", Monaco, monospace;
 }
@@ -8,6 +8,21 @@ body {
 }
 h1 {
     font-size: 42pt;
+}
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 10vw;
+    }
+}
+@media screen and (max-width: 800px) {
+    #actor {
+        font-size: 8vw;
+    }
+}
+@media screen and (max-width: 800px) {
+    #footer {
+        font-size: 2vw;
+    }
 }
 #actor {
     font-size: 40pt;
@@ -18,4 +33,10 @@ h1 {
     padding: 1%;
     background: rgb(58, 58, 58);
     border-color: rgb(30, 30, 30);
+}
+#footer {
+    position: absolute;
+    transform: translateX(-50%);
+    bottom: 0px;
+    font-size: 15pt;
 }
