--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
-    background-image: url("background.png");
     color: lime;
     font-family: "Lucida Console", Monaco, monospace;
 }
 body {
-    text-align: center
+    text-align: center;
+    background-image: url("background.png");
 }
 h1 {
     font-size: 42pt;
